Add default project ID to .env.example for Braintrust configuration

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ BRAINTRUST_API_KEY=your_api_key_here
 
 # Optional: Default organization name
 # BRAINTRUST_ORG_NAME=your_org_name_here
+
+# Default project ID for experiments, prompts, datasets, and logs
+# Get this from: python3 .claude/skills/braintrust-core/scripts/braintrust_projects.py list
+BRAINTRUST_PROJECT_ID=your_project_id_here
